--- a/BDOBossTimer/app/src/main/res/values/strings.xml
+++ b/BDOBossTimer/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DBO Boss Timer</string>
+        <string name="app_name">BDO Boss Timer</string>
 </resources>
